fix: tighten desktop navigation spacing

--- a/assets/css/account.css
+++ b/assets/css/account.css
@@ -8,6 +8,11 @@
 }
 
 @media (min-width: 992px) {
+    .clean-navbar .navbar-nav .nav-link {
+        padding-right: .6rem;
+        padding-left: .6rem;
+    }
+
     .miq-signin-link .miq-signin-label {
         display: none;
     }
